--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>les Delices de Nidel</title>
-    
   </head>
   <body>
     <!-- header -->
+    <header>
+      <ul>
+        <li class="logo">LDN</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Restaurant</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+      <div class="prin">
+        <h1>Good Food, Great Vibe</h1>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel quisquam
+          distinctio id quo ipsam vitae!
+        </p>
+        <div class="btn">reserver une table</div>
+      </div>
+    </header>
 
     <!-- notre histoire -->
 
